--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,7 +27,7 @@ MinimumiOSVersion=IOS_8
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="UdemyProject01Projectile")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonHUD",NewClassName="UdemyProject01HUD")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="UdemyProject01GameMode")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="UdemyProject01Character")
++ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="FirstPersonCharacter")
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
