--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,7 +24,7 @@ MinimumiOSVersion=IOS_8
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPerson",NewGameName="/Script/UdemyProject01")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/UdemyProject01")
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/UdemyProject01")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="UdemyProject01Projectile")
++ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="BallProjetiles")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonHUD",NewClassName="UdemyProject01HUD")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="UdemyProject01GameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="FirstPersonCharacter")
@@ -73,4 +73,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
